errors had ugly spacing on the first line, resolves #32

--- a/www/styles.2.3.0.css
+++ b/www/styles.2.3.0.css
@@ -2,6 +2,10 @@ p {
   max-width: 60ch;
 }
 
+pre {
+  white-space: pre-line;
+}
+
 .fill-viewport {
   width: 100vw;
   height: 100vh;
